--- a/Edit-Item-Details.html
+++ b/Edit-Item-Details.html
@@ -4,7 +4,7 @@
         <title>Edit Item Details</title>
     </head>
     <body>
-        <h1>>Edit Item Details</h1>
+        <h1>Edit Item Details</h1>
             <h2>Edit Amount in Stock</h2>
             <h2>Change Price of Item</h2>
             <h2>Restock Returned Items</h2>
