Shop, Register, and Login

--- a/Shop-Groceries.html
+++ b/Shop-Groceries.html
@@ -5,7 +5,42 @@
     </head>
     <body>
         <h1>Shop Groceries</h1>
-            <h2>Add Groceries</h2>
+        <input type = "text" placeholder = "search">
+        <table>
+            <tr>
+            <td><img src="Soup.jpg" style="width:200px"></td>
+            <td style="text-align:left;vertical-align:top">
+            Chicken Noodle Soup: $1<br>
+            Find comfort in it as a trusted pantry staple for weeknight dinner solutions.<br>
+            <input type="button" value="Add">
+            </td>
+            </tr>
+            <tr>
+            <td><img src="Breast.jpg" style="width:200px"></td>
+            <td style="text-align:left;vertical-align:top">
+            Chicken Breast: $2/lb<br>
+            Hatched, raised and harvested in the USA..<br>
+            <input type="button" value="Add">
+            </td>
+            </tr>
+            <tr>
+            <td><img src="Deli.jpeg" style="width:200px"></td>
+            <td style="text-align:left;vertical-align:top">
+            Chicken Deli Meat: $3<br>
+            Chicken Breast lunch meat with no artificial preservatives.<br>
+            <input type="button" value="Add">
+            </td>
+            </tr>
+            <tr>
+            <td><img src="Nuggets.jpg" style="width:200px"></td>
+            <td style="text-align:left;vertical-align:top">
+            Chicken Nuggets: $4<br>
+            Boneless, skinless chicken chunks perfect for snacks or appetizers.<br>
+            <input type="button" value="Add">
+            </td>
+            </tr>
+            </table>        
+        <h2>Add Groceries</h2>
             <h2>View Item Details</h2>
                 <h3>View Price</h3>
                 <h3>View Amount in Stock</h3>
