Shop, Register, and Login Improvements

--- a/Create-Account.html
+++ b/Create-Account.html
@@ -16,9 +16,27 @@
         <input type = "button" value = "Register" onclick="location.href = 'Thank-You-Registration.html'"><br>
 
         <h2>Add Payment Information</h2>
-        <h2>Logout of Account</h2>
+
+        <input type = "button" value = "Log in to PayPal"><br>
+
+        <h2>Log Out of Account</h2>
+
+        <input type = "button" value = "Log Out"><br>
+
         <h2>Change Password</h2>
+
+        <input type = "text" placeholder = "password"><br><br>
+
+        <input type = "text" placeholder = "new password"><br>
+        <input type = "text" placeholder = "verify new password"><br>
+
+        <input type = "button" value = "Enter"><br>
+
         <h2>Recover Account</h2>
+
+        <input type = "text" placeholder = "email"><br>
+        <input type = "button" value = "Enter"><br>
+
         <h2>Login to Account</h2>
 
         <input type = "text" placeholder = "username"><br>
@@ -27,7 +45,29 @@
         <input type = "button" value = "Login" onclick="location.href = 'Login.html'"><br>
 
         <h2>Edit Shipping Information</h2>
+
+        <input type = "text" placeholder = "Street Address"><br>
+        <input type = "text" placeholder = "City"><br>
+        <input type = "text" placeholder = "State"><br>
+        <input type = "text" placeholder = "Zip"><br>
+        <input type = "button" value = "Enter"><br>
+
         <h3>Request Curbside Pickup</h3>
+
+        <div>Choose Store Location:</div>
+            <select>
+                <option>Eubank</option>
+                <option>Central</option>
+                <option>Coors</option>
+            </select><br><br>
+
+        <input type = "radio" name = "Pickup">
+        <label>Yes</label><br>
+        <input type = "radio" name = "Pickup">
+        <label>No</label><br><br>
+
+        <input type = "button" value = "Save Preferences"><br><br>
+
         <a href="index.html">HOME</a>
     </body>
 </html>
